k8s/overlays/prod/patches/frontend-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placeholder
spec:
  replicas: 2           # 2 replicas frontend en prod
